<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/v_title_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_params"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/v_title_params"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/v_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/radius"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_title_params"
        />

    <com.appyvet.materialrangebar.RangeBar
        android:id="@+id/rangeBar_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrb_tickTopLabels="@array/radius_list"
        app:mrb_barWeight="1dp"
        app:mrb_connectingLineWeight="2dp"
        app:mrb_tickStart="0"
        app:mrb_tickEnd="5"
        app:mrb_rangeBarPaddingBottom="8dp"
        app:mrb_selectorColor="@color/colorAccent"
        app:mrb_pinMaxFont="14sp"
        app:mrb_pinColor="@android:color/transparent"
        app:mrb_pinTextColor="@android:color/transparent"
        app:mrb_temporaryPins="true"
        app:mrb_connectingLineColor="@color/colorAccent"
        app:mrb_rangeBar="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_radius"
        />

    <TextView
        android:id="@+id/v_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rangeBar_radius"

        />

    <com.appyvet.materialrangebar.RangeBar
        android:id="@+id/rangeBar_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrb_barWeight="1dp"
        app:mrb_connectingLineWeight="2dp"
        app:mrb_tickStart="14"
        app:mrb_tickEnd="80"
        app:mrb_rangeBarPaddingBottom="8dp"
        app:mrb_selectorColor="@color/colorAccent"
        app:mrb_pinMaxFont="14sp"
        app:mrb_pinColor="@color/colorAccent"
        app:mrb_temporaryPins="false"
        app:mrb_tickDefaultColor="@android:color/transparent"
        app:mrb_connectingLineColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/v_age"
        />

    <TextView
        android:id="@+id/v_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sex"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rangeBar_age"
        />

    <RadioGroup
        android:id="@+id/sex_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_sex"
        android:checkedButton="@id/sex_any"
        >

        <RadioButton
            android:id="@+id/sex_any"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex_any"
            />
        <RadioButton
            android:id="@+id/sex_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex_male"
            />
        <RadioButton
            android:id="@+id/sex_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex_female"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_apply"
        android:text="@string/apply"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/sex_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>